# midcap-fortress

./: .env.example  .gitignore  README.md  Start_Dashboard.bat  Start_Scheduler.bat  pyproject.toml  rr_fix_health_and_e2e.sh  ruff.toml
.github/ISSUE_TEMPLATE/: command.yml
.github/workflows/: ci.yml  opsbot.yml  paper_cycle.yml  paper_reconcile.yml
prototype/: fortress_trading_agent_prototype.html
scripts/: check.sh  fix.sh  patch_v3_fix_imports_and_opsbot.sh  patch_v3_pytest_fixes.sh  update_sp500_tickers.py  upgrade_portfolio_v3.sh
src/mfp/: cli.py  indicators.py
src/mfp/agents/: critic.py  switching.py
src/mfp/audit/: evidence.py  integrity.py  manifest.py  runlog.py
src/mfp/backtest/: engine.py  gaps.py  metrics.py  report.py
src/mfp/config/: __init__.py  normalize.py  runtime.py
src/mfp/data/: sp400_tickers.txt  sp500_tickers.txt  universe.py  universe_sp400.py  universe_sp500.py  yfinance_provider.py
src/mfp/governance/: __init__.py  certificates.py  guardrails.py  portfolio_safety.py  proposals.py
src/mfp/objectives/: evaluator.py  targets.py
src/mfp/paper/: __init__.py  alpaca_io.py  equity_ledger.py  paper_cycle.py
src/mfp/portfolio/: portfolio_cycle.py  registry.py
src/mfp/reporting/: __init__.py  report_jobs.py  scheduler_service.py
src/mfp/strategy/: midcap_pulse_v1.py
src/mfp/ui/: dashboard_app.py  explain_trade.py  github_opsbot.py
tests/: test_engine_smoke.py  test_explain_trade.py  test_governance.py  test_imports.py  test_normalize_portfolio.py  test_objectives_eval.py  test_opsbot_smoke.py
